# Analytical-Platform-Integrating-CleverMiner

./: .gitignore  LICENSE  README.md  docker-compose.hub.yml  docker-compose.yml
backend/: .env.example  Dockerfile  Procfile  dump.rdb  pyproject.toml  requirements.txt
backend/accounts/: models.py  urls.py
backend/accounts/api/: serializer.py  urls.py  views.py
backend/accounts/migrations/: 0001_initial.py
backend/cleverminer_tasks/: admin.py  apps.py  models.py  signals.py  urls.py  views.py
backend/cleverminer_tasks/api/: serializers.py  urls.py  views.py
backend/cleverminer_tasks/api/dataset/: serializers.py  service.py  urls.py  views.py
backend/cleverminer_tasks/api/execution/: serializers.py  service.py  urls.py  views.py
backend/cleverminer_tasks/api/procedures/: urls.py  views.py
backend/cleverminer_tasks/execution/: runner.py  tasks.py
backend/cleverminer_tasks/migrations/: 0001_initial.py  0002_dataset_encoding.py  0002_run_celery_task_id.py  0003_project_dataset_projects_task_project_and_more.py  0004_dataset_file.py  0005_dataset_file_format_dataset_is_ready_dataset_parent_and_more.py  0006_run_run_snapshot.py  0007_dataset_dataset_clm_guidance_dataset_dataset_stats.py  0008_datasetprofile.py  0009_datasetprofile_dataset_eda_profile.py  0010_remove_dataset_dataset_clm_guidance_and_more.py
backend/cleverminer_tasks/registry/: analysisRegistry.py  procedureConfigsRegistry.py
backend/cleverminer_tasks/services/: __init__.py  analysisRegistry.py  procedure_configs.py  runner.py  services.py
backend/config/: celery.py  settings.py  urls.py
backend/seed/: db.sqlite3
(+359 files in other folders)
