[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "annotated-types==0.7.0",
    "asgiref==3.11.0",
    "attrs==25.4.0",
    "celery>=5.6.0",
    "cleverminer==1.2.4",
    "contourpy==1.3.3",
    "cycler==0.12.1",
    "dj-rest-auth>=5.0.2",
    "django==6.0",
    "django-allauth>=65.13.1",
    "django-celery-results>=2.6.0",
    "django-cors-headers>=4.9.0",
    "djangorestframework==3.16.1",
    "djangorestframework-simplejwt>=5.5.1",
    "drf-spectacular==0.29.0",
    "flower>=2.0.1",
    "fonttools==4.61.1",
    "gunicorn>=24.1.1",
    "inflection==0.5.1",
    "joblib==1.5.3",
    "jsonschema==4.25.1",
    "jsonschema-specifications==2025.9.1",
    "kiwisolver==1.4.9",
    "matplotlib==3.10.8",
    "numpy==2.4.0",
    "packaging==25.0",
    "pandas==2.3.3",
    "pillow==12.0.0",
    "progressbar2==4.5.0",
    "pyarrow>=23.0.0",
    "pydantic==2.12.5",
    "pydantic-core==2.41.5",
    "pyparsing==3.2.5",
    "python-dateutil==2.9.0.post0",
    "python-utils==3.9.1",
    "pytz==2025.2",
    "pyyaml==6.0.3",
    "redis>=7.1.0",
    "referencing==0.37.0",
    "requests>=2.32.5",
    "rpds-py==0.30.0",
    "scikit-learn==1.8.0",
    "scipy==1.16.3",
    "seaborn==0.13.2",
    "six==1.17.0",
    "sqlparse==0.5.5",
    "threadpoolctl==3.6.0",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.2",
    "tzdata==2025.3",
    "uritemplate==4.2.0",
]

[dependency-groups]
dev = [
    "ruff>=0.14.10",
]
